minor txt change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:PaleGoldenRod;" >
 
 
-<h1>My Interweb Tech/Code/WebDev Protfolio!</h1>
+<h1>My Online Dev Protfolio!</h1>
 
 <p>
 	<img src="images/uc.gif" />
