--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -39,12 +39,12 @@ body
 	background-color: #999;
 }
 
-object, embed
+object, embed, img
 {
 	position: absolute;
 }
 
-object
+object, img
 {
 	left: 21px;
 	top: 21px;
@@ -58,7 +58,7 @@ object
 <body>
 
 
-<object id="MenardsCards" type="application/x-shockwave-flash" data="MenardsCards.swf" width="1020" height="680" >
+<!-- <object id="MenardsCards" type="application/x-shockwave-flash" data="MenardsCards.swf" width="1020" height="680" >
 	<param name="movie" value="your-flash-file.swf" />
 	<param name="quality" value="high" />
 	<param name="bgcolor" value="#c0c0c0" />
@@ -68,7 +68,8 @@ object
 		>
 	</embed>
 </object>
-
+ -->
+ <img src="assets/noflash.png" title="Sorry but Flash is not available across this platform. Please use the Email button on the previous page to request a ZIPed copy to be emailed to you directly. Thank you!" />
 
 
 
