slight color tweaks.

--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -257,13 +257,11 @@ html
 
 #folio-mod a
 {
-	padding:0 2px;
 	color: #ff5769;
 }
 	#folio-mod a:hover
 	{
-		color: #af71b0;
-		background-color: #a11b5b;
+		color: #cf2033;
 	}
 
 </style>
