attempt to link external FM.

--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -58,19 +58,19 @@ object, img
 <body>
 
 
-<!-- <object id="MenardsCards" type="application/x-shockwave-flash" data="MenardsCards.swf" width="1020" height="680" >
+<object id="MenardsCards" type="application/x-shockwave-flash" data="http://mikezimmerman.brace.io/fl-el-menards/menardscards.swf" width="1020" height="680" >
 	<param name="movie" value="your-flash-file.swf" />
 	<param name="quality" value="high" />
 	<param name="bgcolor" value="#c0c0c0" />
 	<param name="loop" value="false" />
-	<embed name="MenardsCards" src="MenardsCards.swf" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" 
+	<embed name="MenardsCards" src="http://mikezimmerman.brace.io/fl-el-menards/menardscards.swf" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" 
 		loop="false" menu="false" quality="high" bgcolor="#c0c0c0" align="left" width="1020" height="680" 
 		>
 	</embed>
 </object>
- -->
- <img src="assets/noflash.png" title="Sorry but Flash is not available across this platform. Please use the Email button on the previous page to request a ZIPed copy to be emailed to you directly. Thank you!" />
-
+<!--
+<img src="assets/noflash.png" title="Sorry but Flash is not available across this platform. Please use the Email button on the previous page to request a ZIPed copy to be emailed to you directly. Thank you!" />
+-->
 
 
 <!-- Protfolio Add-In Styles/Content Module. -->
