added link to instructionbox.js

--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -290,7 +290,16 @@ So, I created this "floating" instructional UI in JavaScript. It could be dragge
 able to be interacted with.
 </h5>
 <h5>
-The original targeted IE7 (the sole browser used across this entire global enterprise), and was an object-oriented pure JavaScript massive "all in one" solution (as dictated by the business need cases) which made use of my own version of JS "polymorphism" to enable every possible type of instructional UI that we could ever need to be implemented through a single simple interface with an easy-to-program API (also of my creation). I have re-created a very simplified version here in current HTML5/CSS3/JS/jQuery technologies. To view the code behind this project on GitHub, click <a href="javascript:alert( 'Sorry to annoyingly have to alert this, but the link is still under dev.: please check back in approx. 24 hours. Thx!');" >here</a>.  Or, to view the full original IE7 "polymorphic" script file (not functional on current platforms, but entertaining to read all 1500+ lines of pure JS  handtyped by me in Notepad!), click <a href="javascript:alert( 'Sorry to annoyingly have to alert this, but the link is still under dev.: please check back in approx. 24 hours. Thx!');" >here</a>.
+The original targeted IE7 (the sole browser used across this entire global enterprise), 
+and was an object-oriented pure JavaScript massive "all in one" solution (as dictated by the business use cases) 
+which made use of my own version of JS "polymorphism" to enable every possible type of instructional UI 
+that we could ever need to be implemented through a single simple interface with an easy-to-program API (also of my creation). 
+I have re-created a very simplified version here in current HTML5/CSS3/JS/jQuery technologies. 
+To view the code behind this project on GitHub, click <a href="javascript:alert( 'Sorry to annoyingly have to alert this, 
+but the link is still under dev.: please check back in approx. 24 hours. Thx!');" >here</a>. 
+Or, to view the full original IE7 "polymorphic" script file (not fully functional on all platforms, 
+but entertaining to read all 1500+ lines of pure JS  handtyped by me in Notepad!), 
+click <a href="https://github.com/mikezimmerman/instructionbox.js/blob/master/instructionbox.js" >here</a>.
 </h5>
 </div>
 
