changed link icons

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="box" >
 					<h4 class="reversal" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
-						<img src="./images/link-pp.png" />&nbsp;
+						<img src="./images/link-pp.gif" />&nbsp;
 						<p>Floating Instructions UI for system simulations.</p>
 					</button>
 					<!-- <h6><i>tags:</i>&nbsp; JavaScript, jQuery, UI, UX, Graphic Design, Layout, eLearning Development</h6> -->
@@ -111,7 +111,7 @@
 				<div class="box" >
 					<h4 class="reversal" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
-						<img src="./images/link-pp.png" />&nbsp;
+						<img src="./images/link-pp.gif" />&nbsp;
 						<p>Custom eLearning Course produced as a Flash Movie.</p>
 					</button>
 					<!-- <h6><i>tags:</i>&nbsp; UI, UX, Graphic Design, Layout, Flash, Instructional Design, Writing (Instructional), eLearning Development</h6> -->
@@ -234,6 +234,6 @@
 
 
 <!-- (preloading the < 0.5K hover image, to ensure seamless initial mouseover state.)  -->
-<img src="./images/link-pw.png" width="0" height="0" style="display:none;" />
+<img src="./images/link-pw.gif" width="0" height="0" style="display:none;" />
 </body>
 </html>
