--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<section id="examples" class="cf" >
 
 			<header>
-				<h3>Examples</h3>
+				<h3>Examples:</h3>
 				<div id="ttip-examples" class="tooltip" >
 					<div class="ttip-content" >
 						Here are links to some examples of my work!
@@ -129,7 +129,7 @@
 		<section id="expertise" class="cf" >
 
 			<header>
-				<h3>Expertise</h3>
+				<h3>Expertise:</h3>
 				<div id="ttip-expertise" class="tooltip" >
 					<div class="ttip-content" >
 						Here is a list of some of my skills!
