changed the colorway.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		<!-- <h3>Mike Zimmerman</h3> -->
 
 		<div id="nav-buttons" >
-			<button><h3>Expertise</h3></button>
-			<button><h3>Examples</h3></button>
+			<button id="expert-btn" ><h3>Expertise</h3></button>
+			<button id="exampl-btn" ><h3>Examples</h3></button>
 			<button data-mailto="mikezimmerman@users.noreply.github.com" ><h3>Email</h3></button>
 		</div>
 
@@ -65,9 +65,7 @@
 <div id="container-header" >
 	<header id="header" class="wrapper" >
 
-		<figure id="headshot" >
-			<img src="images/photo.gif" />
-		</figure>
+		<div id="headshot" ></div>
 
 		<h1>Mike Zimmerman*</h1>
 		<h2>JavaScript Developer</h2>
