--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -120,8 +120,8 @@ $( document ).ready(
 }
 	#folio-mod button:hover
 	{
-		color: #af71b0;
-		background-color: #e36082;
+		color: #606060;
+		background-color: #44aba0;
 	}
 
 
