--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -175,13 +175,13 @@ html
 
 #examples
 {
-	color: #ff5769;
-	background-color: #af71b0;
+	color: #35ddcb;
+	background-color: #606060;
 }
 	#examples .reversal
 	{
-		background-color: #ff5769;
-		color: #af71b0;
+		background-color: #35ddcb;
+		color: #606060;
 	}
 
 #examples button
@@ -195,7 +195,7 @@ html
 	#examples button:hover
 	{
 		background-color: #a01b5b;
-		color: #af71b0;
+		color: #606060;
 	}
 
 #content header
@@ -222,8 +222,8 @@ html
 	float: right;
 	width: 630px;
 	z-index: 9999;
-	color: #ff5769;
-	background-color: #af71b0;
+	color: #35ddcb;
+	background-color: #606060;
 }
 
 #folio-mod .wrapper
@@ -241,7 +241,7 @@ html
 }
 	#folio-mod button:hover
 	{
-		background-color: #e36082;
+		background-color: #44aba0;
 	}
 
 
@@ -257,7 +257,7 @@ html
 
 #folio-mod a
 {
-	color: #ff5769;
+	color: #35ddcb;
 }
 	#folio-mod a:hover
 	{
