change color of link hovers

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<h3>Examples:</h3>
 				<div id="ttip-examples" class="tooltip" >
 					<div class="ttip-content" >
-						Here are links to some examples of my work!
+						In this section, you will find links to examples of some of my work.
 					</div>
 				</div>
 			</header>
@@ -130,7 +130,7 @@
 				<h3>Expertise:</h3>
 				<div id="ttip-expertise" class="tooltip" >
 					<div class="ttip-content" >
-						Here is a list of some of my skills!
+						This section includes a list of many of my key skills.
 					</div>
 				</div>
 			</header>
@@ -202,7 +202,7 @@
 						<li>Print Design, Layout</li>
 						<li>Writing, Copyediting, Proofreading</li>
 						<li>Fine Art, Illustration, Photography</li>
-						<li>Fashion Design, Menu Design</li>
+						<li>Fashion Illustration, Menu Design</li>
 						<li>Fine Pastry &amp; Custom Ice Creams</li>
 					</ul>
 				</div>
