--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -220,7 +220,7 @@ html
 	position: relative;
 	display: inline-block;
 	float: right;
-	width: 630px;
+	max-width: 630px;
 	z-index: 9999;
 	color: #35ddcb;
 	background-color: #606060;
@@ -235,7 +235,7 @@ html
 {
 	display:inline-block;
 	height: 39px;
-	min-width: 568px;
+	width: 568px;
 	text-align: left;
 	cursor: pointer;
 }
@@ -261,7 +261,7 @@ html
 }
 	#folio-mod a:hover
 	{
-		color: #cf2033;
+		color: #999;
 	}
 
 </style>
