--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -161,11 +161,11 @@ The entire UI design and behaviors&mdash;including the course title, navigationa
 Entirely hand-designed and built by me.
 </h5>
 <h5>
-All aspects of the graphic design and animation of the "Pop Quiz" UI (first instance of which appears on page 4 of 48 of the "Big Card" course)? 
-Entirely hand-drawn, hand-animated, and color-theoried by me!
+All aspects of the graphic design and animation of the "Pop Quiz" UI (first instance of which appears on page 4 of 48 of the "Big Card" module)? 
+Entirely hand-drawn, hand-animated, color-theorized, and ActionScript-programmed by me.
 </h5>
 <h5>
-The free clipart used to illustrate many of the pages? Alas, a necessary evil imposed by the astonishingly aggressive two-week zero-to-live-in-prod project timeline.
+The free clipart used to illustrate many of the pages? Alas, a necessary evil imposed by the astonishingly aggressive two weeks zero-to-launch project timeline.
 </h5>
 </div>
 
