compiled all CSS into a single sheet w/ SASS.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- suppress default iPhone scaling -->
 
-	<link type="text/css" rel="stylesheet" href="./styles/fonts.css" /> <!-- my web fonts (loading this first because "normalize" is huge and I want fonts to render before that has to be parsed). -->
-	<link type="text/css" rel="stylesheet" href="./styles/normalize.css" /> <!-- Modern HTML5 alternative to trad. "CSS Reset". (nicolasgallagher) -->
-	<link type="text/css" rel="stylesheet" href="./styles/all.css" /> <!-- my custom styles for all media. -->
-	<link type="text/css" rel="stylesheet" href="./styles/clearfix.css" /> <!-- Modern HTML5 Float-Clearing alternative to trad. "clearfix". (nicolasgallagher) -->
+	<link type="text/css" rel="stylesheet" href="./styles/compiled.css" />
 
 	<script src="./scripts/jquery-1.11.1.min.js" ></script>
 	<script src="./scripts/jquery.visible.js" ></script><!-- I use to elect weather or not to scrollTo targets on nav btn clicks. -->
@@ -40,7 +37,6 @@
 
 </head>
 <body>
-
 
 
 <!-- Navigation, top -->
