--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- Navigation, top -->
 
 <div id="container-nav" >
-	<section id="nav" class="cf wrapper" >
+	<section id="nav" class="cf wrapper fontFade" style="visibility:hidden;" >
 
 		<!-- <h3>Mike Zimmerman</h3> -->
 
@@ -68,7 +68,7 @@
 <!-- Header -->
 
 <div id="container-header" >
-	<header id="header" class="wrapper" >
+	<header id="header" class="wrapper fontFade" style="visibility:hidden;" >
 
 		<div id="headshot" ></div>
 
@@ -89,6 +89,7 @@
 		<!-- the "Examples" portfolio section -->
 
 		<section id="examples" class="cf" >
+		<div class="fontFade" style="visibility:hidden;" >
 
 			<header>
 				<h3>Examples:</h3>
@@ -125,11 +126,13 @@
 				<h4>Plus!&nbsp; Many more examples, coming soon&hellip;</h4>
 			</footer>
 
+		</div>
 		</section>
 
 		<!-- the "Expertise" About Me section -->
 
 		<section id="expertise" class="cf" >
+		<div class="fontFade" style="visibility:hidden;" >
 
 			<header>
 				<h3>Expertise:</h3>
@@ -217,16 +220,17 @@
 				<p></p>
 			</footer>
 
+		</div>
 		</section>
 
 	</article>
 </div>
 
 
-<!-- Footer ( + add'l. Navigation?), bottom -->
+<!-- Footer, bottom -->
 
 <div id="container-footer" >
-	<footer id="footer" >
+	<footer id="footer" class="fontFade" style="visibility:hidden;" >
 		<p>&copy; 2014 Mike Zimmerman. All rights reserved.</p>
 		<h5>&nbsp; version: 1.0.1</h5>
 		<h3>* metropolis: Chicago</h3>
