--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 </head>
 <body>
 
+<!-- attempting to "preload" fonts immediately via this hidden text chunk, to avoid/reduce FOUT. -->
+<div style="position:absolute; left:-400px; top:-400px; width:200px; visibility:hidden;" >
+	<span style="font-family: MuseoSans;" >MuseoSans</span>
+	<span style="font-family: Mangerica;" >Mangerica</span>
+	<span style="font-family: MuseoSlabItalic;" >MuseoSlabItalic</span>
+	<span style="font-family: Choplin;" >Choplin</span>
+	<span style="font-family: MuseoSlab;" >MuseoSlab</span>
+</div>
+
 
 
 <!-- Navigation, top -->
@@ -242,5 +251,17 @@
 
 <!-- (preloading the < 0.5K hover image, to ensure seamless initial mouseover state.)  -->
 <img src="./images/link-pw.gif" width="0" height="0" style="display:none;" />
+
+<div>
+	<h2 style='font-family: "Helvetica Neue";' >M.Z.</h2>
+</div>
+<div>
+	<h2 style='font-family: HelveticaNeue;' >M.Z.</h2>
+</div>
+<div>
+	<h2 style='font-family: Helvetica;' >M.Z.</h2>
+</div>
+
+
 </body>
 </html>
