increased responsive performance
by adding additional, more-granular media queries.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 		<!-- <h3>Mike Zimmerman</h3> -->
 
 		<div id="nav-buttons" >
-			<button id="expert-btn" ><h3>Expertise</h3></button>
-			<button id="exampl-btn" ><h3>Examples</h3></button>
-			<button data-mailto="mikezimmerman@users.noreply.github.com" ><h3>Email</h3></button>
+			<button id="expert-btn" title="Expertise" ><h3>Expertise</h3></button>
+			<button id="exampl-btn" title="Examples" ><h3>Examples</h3></button>
+			<button data-mailto="mikezimmerman@users.noreply.github.com" title="Email" ><h3>Email</h3></button>
 		</div>
 
 	</section>
@@ -152,8 +152,8 @@
 				</div>
 			</header>
 
-			<article class="wrapper" >
-				<div class="box dimmed" >
+			<article class="wrapper dimmed" >
+				<div class="box" >
 					<h4>&nbsp;&nbsp;Ascendant</h4>
 					<ul>
 						<li>Bootstrap</li>
@@ -166,7 +166,7 @@
 				</div>
 			</article>
 
-			<article class="wrapper" >
+			<article class="wrapper active" >
 				<div class="box" >
 					<h4 class="reversal" >&nbsp;&nbsp;Current</h4>
 					<ul>
