changed the order of the script tags

--- a/index.html
+++ b/index.html
@@ -16,31 +16,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" /><!-- suppress default iPhone scaling -->
 
-	<script src="./scripts/jquery-1.11.1.min.js" ></script>
-	<script src="./scripts/jquery.visible.js" ></script><!-- using to determine whether or not to scrollTo the targets on nav btn clicks. -->
-
-	<script src="./scripts/navigation.js" ></script><!-- mine -->
-
-	<script src="./scripts/hideaddressbar.js" ></script><!-- Normalized hide address bar for iOS & Android. (scottjehl) -->
-	<script src="./scripts/respond.min.js" ></script><!-- Adds media query support for IE8 and under. (scottjehl) -->
-
-<!-- HTML5 Shim compels IE8 and under to correctly render the HTML5-specific elements. -->
-<!--[if lt IE 9]>
-	<script src="./scripts/html5.js" ></script>
-<![endif]-->
-
-<!--[if lt IE 9]>
-	<script src="./scripts/jquery-1.10.2.min.js" ></script>
-<![endif]-->
-		
-<!--[if IE 8]>
-	<script src="./scripts/checkbox.js" ></script>
-<![endif]-->
-		
-<!--[if IE 6]>
-	<script src="./scripts/selectivizr-min.js" ></script>
-<![endif]-->
-
 	<title>MikeZimmerman/Developer</title>
 
 </head>
@@ -249,7 +224,38 @@
 
 
 
-<!-- (preloading the < 0.5K hover image, to ensure seamless initial mouseover state.)  -->
+<!-- (preloading the < 0.5K hover image, to ensure seamless initial mouseover state.) -->
 <img src="./images/link-pw.gif" width="0" height="0" style="display:none;" />
+
+
+
+
+<!-- (all script tags.) -->
+
+	<script src="./scripts/jquery-1.11.1.min.js" ></script>
+	<script src="./scripts/jquery.visible.js" ></script><!-- using to determine whether or not to scrollTo the targets on nav btn clicks. -->
+
+	<script src="./scripts/navigation.js" ></script><!-- mine -->
+
+	<script src="./scripts/hideaddressbar.js" ></script><!-- Normalized hide address bar for iOS & Android. (scottjehl) -->
+	<script src="./scripts/respond.min.js" ></script><!-- Adds media query support for IE8 and under. (scottjehl) -->
+
+<!-- HTML5 Shim compels IE8 and under to correctly render the HTML5-specific elements. -->
+<!--[if lt IE 9]>
+	<script src="./scripts/html5.js" ></script>
+<![endif]-->
+
+<!--[if lt IE 9]>
+	<script src="./scripts/jquery-1.10.2.min.js" ></script>
+<![endif]-->
+		
+<!--[if IE 8]>
+	<script src="./scripts/checkbox.js" ></script>
+<![endif]-->
+		
+<!--[if IE 6]>
+	<script src="./scripts/selectivizr-min.js" ></script>
+<![endif]-->
+
 </body>
 </html>
