--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
-<!--[if lt IE 9]><html class="ie" ><![endif]-->
-<!--[if !IE]><!--><html><!--<![endif]-->
-<head lang="en" >
+<!--[if lt IE 9]><html lang="en" class="ie" ><![endif]-->
+<!--[if !IE]><!--><html lang="en" ><!--<![endif]-->
+<head>
 
 	<!-- my web fonts (loading this first because "normalize" is huge and I want fonts to render before that has to be parsed). -->
 	<link type="text/css" rel="stylesheet" href="./styles/fonts.css" />
@@ -232,29 +232,20 @@
 
 <!-- (all script tags.) -->
 
+<!--[if lt IE 9]>
+	<script src="./scripts/jquery-1.10.2.min.js" ></script>
+<![endif]-->
 	<script src="./scripts/jquery-1.11.1.min.js" ></script>
-	<script src="./scripts/jquery.visible.js" ></script><!-- using to determine whether or not to scrollTo the targets on nav btn clicks. -->
+	<script src="./scripts/jquery.visible.js" ></script> <!-- using to determine whether or not to scrollTo the targets on nav btn clicks. -->
 
-	<script src="./scripts/navigation.js" ></script><!-- mine -->
+	<script src="./scripts/navigation.js" ></script> <!-- mine -->
 
-	<script src="./scripts/hideaddressbar.js" ></script><!-- Normalized hide address bar for iOS & Android. (scottjehl) -->
-	<script src="./scripts/respond.min.js" ></script><!-- Adds media query support for IE8 and under. (scottjehl) -->
+	<script src="./scripts/hideaddressbar.js" ></script> <!-- Normalized hide address bar for iOS & Android. (scottjehl) -->
+	<script src="./scripts/respond.min.js" ></script> <!-- Adds media query support for IE8 and under. (scottjehl) -->
 
 <!-- HTML5 Shim compels IE8 and under to correctly render the HTML5-specific elements. -->
 <!--[if lt IE 9]>
 	<script src="./scripts/html5.js" ></script>
-<![endif]-->
-
-<!--[if lt IE 9]>
-	<script src="./scripts/jquery-1.10.2.min.js" ></script>
-<![endif]-->
-		
-<!--[if IE 8]>
-	<script src="./scripts/checkbox.js" ></script>
-<![endif]-->
-		
-<!--[if IE 6]>
-	<script src="./scripts/selectivizr-min.js" ></script>
 <![endif]-->
 
 </body>
