added bg to colorway 2.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<title>MikeZimmerman/Developer</title>
 
 </head>
-<body>
+<body class="cw01" >
 
 <!-- attempting to "preload" fonts immediately via this hidden text chunk, to avoid/reduce FOUT. -->
 <div style="position:absolute; left:-400px; top:-400px; width:200px; visibility:hidden;" >
