--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 				<div class="box" >
 					<h4 class="cw01" >&nbsp;&nbsp;Ascendant</h4>
 					<ul class="cw01" >
-						<li>Bootstrap</li>
-						<li>Foundation</li>
 						<li>Backbone</li>
 						<li>Ember</li>
-						<li>Scrum</li>
-						<li>Less</li>
+						<li>Couchbase&nbsp;&nbsp;</li>
+						<li>Cassandra</li>
+						<li>MongoDB</li>
+						<li>React</li>
 					</ul>
 				</div>
 			</article>
@@ -146,11 +146,10 @@
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Responsive Design</li>
-						<li>jQuery</li>
-						<li>AngularJS</li>
-						<li>AJAX, JSON</li>
-						<li>OO-JavaScript SPAs</li>
-						<li></li>
+						<li>Mobile First</li>
+						<li>jQuery, AJAX, JSON</li>
+						<li>AngularJS, RESTful</li>
+						<li>Pure-JavaScript SPAs</li>
 					</ul>
 				</div>
 			</article>
@@ -159,13 +158,12 @@
 				<div class="box" >
 					<h4>&nbsp;</h4>
 					<ul>
-						<li>Sass</li>
 						<li>Node</li>
-						<li>REST</li>
+						<li>Sass</li>
+						<li>Less</li>
 						<li>ASP</li>
+						<li>.NET</li>
 						<li>MVC</li>
-						<li>SQL</li>
-						<li></li>
 					</ul>
 				</div>
 			</article>
@@ -180,7 +178,6 @@
 						<li>Instructional Design</li>
 						<li>eLearning Development</li>
 						<li>LMS, CMS, LCMS Admin</li>
-						<li></li>
 					</ul>
 				</div>
 			</article>
@@ -189,12 +186,12 @@
 				<div class="box" >
 					<h4>&nbsp;</h4>
 					<ul>
-						<li>Graphic Design</li>
-						<li>Print Design, Layout</li>
+						<li>Graphic Design, Print Design, Layout</li>
 						<li>Writing, Copyediting, Proofreading</li>
 						<li>Fine Art, Illustration, Photography</li>
 						<li>Fashion Illustration, Menu Design</li>
 						<li>Fine Pastries &amp; Custom Ice Creams</li>
+						<li>Idiosyncratic Nano Aquarium Design</li>
 					</ul>
 				</div>
 			</article>
