minor txt changes.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						<li>Ember</li>
 						<li>Couchbase&nbsp;&nbsp;</li>
 						<li>Cassandra</li>
-						<li>MongoDB</li>
+						<li>Jasmine</li>
 						<li>React</li>
 					</ul>
 				</div>
@@ -145,11 +145,11 @@
 					<h4 class="reversal cw01" >&nbsp;&nbsp;Current</h4>
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
-						<li>Responsive Design</li>
 						<li>Mobile First</li>
-						<li>jQuery, AJAX, JSON</li>
-						<li>AngularJS, RESTful</li>
+						<li>Responsive Design</li>
 						<li>Pure-JavaScript SPAs</li>
+						<li>jQuery, AJAX, JSON</li>
+						<li>AngularJS, RESTful APIs</li>
 					</ul>
 				</div>
 			</article>
