minor txt changes.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<li>Couchbase&nbsp;&nbsp;</li>
 						<li>Cassandra</li>
 						<li>Jasmine</li>
-						<li>React</li>
+						<li>React, MV*</li>
 					</ul>
 				</div>
 			</article>
@@ -147,8 +147,8 @@
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Mobile First</li>
 						<li>Responsive Design</li>
-						<li>Pure-JavaScript SPAs</li>
-						<li>jQuery, AJAX, JSON</li>
+						<li>Pure (raw) JavaScript SPAs</li>
+						<li>jQuery, JSON, (raw) AJAX</li>
 						<li>AngularJS, RESTful APIs</li>
 					</ul>
 				</div>
@@ -156,7 +156,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4>&nbsp;</h4>
+					<h4 class="reversal cw01" >&nbsp;</h4>
 					<ul>
 						<li>Node</li>
 						<li>Sass</li>
@@ -170,7 +170,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4>&nbsp;</h4>
+					<h4 class="reversal cw01" >&nbsp;</h4>
 					<ul>
 						<li>Photoshop</li>
 						<li>Visual Studio</li>
@@ -184,7 +184,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4>&nbsp;</h4>
+					<h4 class="reversal cw01" >&nbsp;</h4>
 					<ul>
 						<li>Graphic Design, Print Design, Layout</li>
 						<li>Writing, Copyediting, Proofreading</li>
