--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 						<li>Couchbase&nbsp;&nbsp;</li>
 						<li>Cassandra</li>
 						<li>Jasmine</li>
-						<li>React, MV*</li>
+						<li>Knockout</li>
+						<!--<li>MongoDB</li>
+						<li>React</li>-->
 					</ul>
 				</div>
 			</article>
@@ -147,8 +149,8 @@
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Mobile First</li>
 						<li>Responsive Design</li>
-						<li>Pure (raw) JavaScript SPAs</li>
-						<li>jQuery, JSON, (raw) AJAX</li>
+						<li>Pure JavaScript SPAs</li>
+						<li>jQuery, JSON, raw AJAX</li>
 						<li>AngularJS, RESTful APIs</li>
 					</ul>
 				</div>
