changed some txt and some colors.

--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;&nbsp;Development</h4>
-					<button class="cw01" data-href="./projects/js-el-instructbox/instructbox.htm" >
-						<img id="link-1-00" src="./images/link-pp.gif" /><img id="link-1-01" src="./images/link-mf.gif" style="display:none;" />
-						<p>Floating Instructions UI for system simulations.</p>
+					<h4 class="reversal cw01" >&nbsp;&nbsp;Design</h4>
+					<button data-href="./projects/fl-el-menards/menards.htm" >
+						<img id="link-2-00" src="./images/link-pp.gif" /><img id="link-2-01" src="./images/link-mf.gif" style="display:none;" />
+						<p>Custom Dynamic eLearning Course, published as Flash</p>
 					</button>
 				</div>
 			</article>
 
-			<article class="wrapper" >
+			<article id="developmt" class="wrapper cw01" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;&nbsp;Design</h4>
-					<button data-href="./projects/fl-el-menards/menards.htm" >
-						<img id="link-2-00" src="./images/link-pp.gif" /><img id="link-2-01" src="./images/link-mf.gif" style="display:none;" />
-						<p>Custom eLearning Course produced as a Flash Movie.</p>
+					<h4 class="reversal cw01" >&nbsp;&nbsp;Development</h4>
+					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
+						<img id="link-1-00" src="./images/link-p1.gif" /><img id="link-1-01" src="./images/link-m1.gif" style="display:none;" />
+						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
 					</button>
 				</div>
 			</article>
@@ -137,7 +137,8 @@
 						<li>Jasmine</li>
 						<li>Knockout</li>
 						<!--<li>MongoDB</li>
-						<li>React</li>-->
+						<li>React</li>
+						<li>Meteor</li>-->
 					</ul>
 				</div>
 			</article>
@@ -147,10 +148,10 @@
 					<h4 class="reversal cw01" >&nbsp;&nbsp;Current</h4>
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
-						<li>Mobile First</li>
-						<li>Responsive Design</li>
-						<li>Pure JavaScript SPAs</li>
-						<li>jQuery, JSON, raw AJAX</li>
+						<li>Mobile First Responsive Design</li>
+						<li>jQuery, JSON, (raw) AJAX</li>
+						<li>JavaScript Objects &amp; Inheritance</li>
+						<li>Pure (raw) JavaScript SPAs</li>
 						<li>AngularJS, RESTful APIs</li>
 					</ul>
 				</div>
@@ -193,7 +194,7 @@
 						<li>Fine Art, Illustration, Photography</li>
 						<li>Fashion Illustration, Menu Design</li>
 						<li>Fine Pastries &amp; Custom Ice Creams</li>
-						<li>Idiosyncratic Nano Aquarium Design</li>
+						<li>Distinctive Nano Aquarium Design</li>
 					</ul>
 				</div>
 			</article>
