--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
 <!--[if !IE]><!--><html lang="en" ><!--<![endif]-->
 <head>
 
-	<!-- my web fonts (loading this first because "normalize" is huge and I want fonts to render before that has to be parsed). -->
 	<link type="text/css" rel="stylesheet" href="./styles/fonts.css" />
-	<!-- Modern HTML5 alternative to trad. "CSS Reset". (nicolasgallagher) -->
 	<link type="text/css" rel="stylesheet" href="./styles/normalize.css" />
-	<!-- my custom styles, for all media. -->
 	<link type="text/css" rel="stylesheet" href="./styles/all.css" />
-	<!-- Modern HTML5 Float-Clearing alternative to trad. "clearfix". (nicolasgallagher) -->
 	<link type="text/css" rel="stylesheet" href="./styles/clearfix.css" />
 
-	<meta charset="utf-8" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://mikezimmerman.github.io/icons/ico144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://mikezimmerman.github.io/icons/ico114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://mikezimmerman.github.io/icons/ico72.png" />
+	<link rel="apple-touch-icon-precomposed" href="http://mikezimmerman.github.io/icons/ico64.png" />
+	<link rel="shortcut icon" sizes="196x196" href="http://mikezimmerman.github.io/icons/ico196.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
+	<link rel="icon" type="image/png" href="http://mikezimmerman.github.io/icons/favicon.png" />
+	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/ico32.png" />
+	<link rel="canonical" href="http://mikezimmerman.github.io/" />
+
+	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" /><!-- suppress default iPhone scaling -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
+	<meta name="application-name" content="MikeZimmerman/Developer" />
+	<meta name="msapplication-TileColor" content="#707070" />
+	<meta name="msapplication-TileImage" content="http://mikezimmerman.github.io/icons/ico64.png" />
+	<meta name="keywords" content="Mike Zimmerman, JavaScript Developer, Web Designer, Content Creator, Creative Artist, Chicago" />
+	<meta name="description" content="The online portfolio of Mike Zimmerman, Chicago-area JavaScript Developer, Web Designer, Content Creator, and Creative Artist" />
 
 	<title>MikeZimmerman/Developer</title>
 
 </head>
 <body class="cw01" >
 
-<!-- attempting to "preload" fonts immediately via this hidden text chunk, to avoid/reduce FOUT. -->
 <div style="position:absolute; left:-400px; top:-400px; width:200px; visibility:hidden;" >
 	<span style="font-family: MuseoSans;" >MuseoSans</span>
 	<span style="font-family: Mangerica;" >Mangerica</span>
@@ -36,7 +47,7 @@
 <!-- Navigation, top -->
 
 <div id="container-nav" class="cw01" >
-	<section id="nav" class="cf wrapper fontFade" style="visibility:hidden;" >
+	<section id="nav" class="cf wrapper fadein" style="visibility:hidden;" >
 
 		<div id="color-swap" class="cw01" title='Click here to install the "Deep Midnight Flamingo" theme.' ></div>
 
@@ -53,7 +64,7 @@
 <!-- Header -->
 
 <div id="container-header" >
-	<header id="header" class="wrapper fontFade" style="visibility:hidden;" >
+	<header id="header" class="wrapper fadein" style="visibility:hidden;" >
 
 		<div id="headshot" ></div>
 
@@ -74,7 +85,7 @@
 		<!-- the "Examples" portfolio section -->
 
 		<section id="examples" class="cw01 cf" >
-		<div class="fontFade" style="visibility:hidden;" >
+		<div class="fadein" style="visibility:hidden;" >
 
 			<header>
 				<h3>Examples:</h3>
@@ -95,13 +106,14 @@
 				</div>
 			</article>
 
-			<article id="developmt" class="wrapper cw01" >
+			<article id="development" class="wrapper cw01" >
 				<div class="box" >
 					<h4 class="reversal cw01" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
 						<img id="link-1-00" src="./images/link-p1.gif" /><img id="link-1-01" src="./images/link-m1.gif" style="display:none;" />
 						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
 					</button>
+					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
 				</div>
 			</article>
 
@@ -115,7 +127,7 @@
 		<!-- the "Expertise" About Me section -->
 
 		<section id="expertise" class="cw01 cf" >
-		<div class="fontFade" style="visibility:hidden;" >
+		<div class="fadein" style="visibility:hidden;" >
 
 			<header>
 				<h3>Expertise:</h3>
@@ -177,6 +189,7 @@
 					<ul>
 						<li>Photoshop</li>
 						<li>Visual Studio</li>
+						<!-- <li>Ps, VS, Sublime, GitHub</li> -->
 						<li>Sublime, GitHub</li>
 						<li>Instructional Design</li>
 						<li>eLearning Development</li>
@@ -213,7 +226,7 @@
 <!-- Footer, bottom -->
 
 <div id="container-footer" class="cw01" >
-	<footer id="footer" class="fontFade" style="visibility:hidden;" >
+	<footer id="footer" class="fadein" style="visibility:hidden;" >
 		<p>&copy; 2014 Mike Zimmerman. All rights reserved.</p>
 		<h5>&nbsp; version: 1.0.3</h5>
 		<h3>* metropolis: Chicago</h3>
