minor txt changes.

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 				<div class="box" >
 					<h4 class="reversal cw01" >&nbsp;</h4>
 					<ul>
-						<li>Photoshop</li>
-						<li>Visual Studio</li>
+						<li>Photoshop, Bootstrap</li>
+						<li>Visual Studio, Sublime</li>
 						<!-- <li>Ps, VS, Sublime, GitHub</li> -->
-						<li>Sublime, GitHub</li>
+						<li>GitHub, Codepen</li>
 						<li>Instructional Design</li>
 						<li>eLearning Development</li>
 						<li>LMS, CMS, LCMS Admin</li>
