micro txt change.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<li>jQuery, JSON, (raw) AJAX</li>
 						<li>JavaScript Objects &amp; Inheritance</li>
 						<li>Pure (raw) JavaScript SPAs</li>
-						<li>AngularJS, RESTful APIs</li>
+						<li>AngularJS, RESTful, RequireJS</li>
 					</ul>
 				</div>
 			</article>
