--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Mobile First Responsive Design</li>
-						<li>jQuery, JSON, (raw) AJAX</li>
-						<li>JavaScript Objects &amp; Inheritance</li>
-						<li>Pure (raw) JavaScript SPAs</li>
-						<li>AngularJS, RESTful, RequireJS</li>
+						<li>jQuery, JSON, AJAX</li>
+						<li>JavaScript Objects</li>
+						<li>JavaScript SPAs</li>
+						<li>AngularJS, RequireJS, MVVM</li>
 					</ul>
 				</div>
 			</article>
