implemented a third color theme.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<title>MikeZimmerman/Developer</title>
 
 </head>
-<body class="cw01" >
+<body class="cw00" >
 
 <div style="position:absolute; left:-400px; top:-400px; width:200px; visibility:hidden;" >
 	<span style="font-family: MuseoSans;" >MuseoSans</span>
@@ -46,15 +46,21 @@
 
 <!-- Navigation, top -->
 
-<div id="container-nav" class="cw01" >
+<div id="container-nav" class="cw00" >
 	<section id="nav" class="cf wrapper fadein" style="visibility:hidden;" >
 
-		<div id="color-swap" class="cw01" title='Click here to install the "Deep Midnight Flamingo" theme.' ></div>
+		<div id="theme-selector" title='Click here to rotate through themes. Next up is: "Deep Midnight Flamingo"' >
+			<div id="ts-01" ></div>
+			<div id="ts-02" ></div>
+			<div id="ts-00" ></div>
+			<div id="ts-01-2" ></div>
+			<div id="ts-02-2" ></div>
+		</div>
 
 		<div id="nav-buttons" >
-			<button id="expert-btn" class="cw01" title="Expertise" ><h3>Expertise</h3></button>
-			<button id="exampl-btn" class="cw01" title="Examples" ><h3>Examples</h3></button>
-			<button class="cw01" data-mailto="mikezimmerman@users.noreply.github.com" title="Email" ><h3>Email</h3></button>
+			<button id="expert-btn" class="cw00" title="Expertise" ><h3>Expertise</h3></button>
+			<button id="exampl-btn" class="cw00" title="Examples" ><h3>Examples</h3></button>
+			<button class="cw00" data-mailto="mikezimmerman@users.noreply.github.com" title="Email" ><h3>Email</h3></button>
 		</div>
 
 	</section>
@@ -63,10 +69,10 @@
 
 <!-- Header -->
 
-<div id="container-header" >
+<div id="container-header" class="cw00" >
 	<header id="header" class="wrapper fadein" style="visibility:hidden;" >
 
-		<div id="headshot" ></div>
+		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" style="display:none;" /></div>
 
 		<h1>Mike Zimmerman*</h1>
 		<h2>JavaScript Developer</h2>
@@ -84,7 +90,7 @@
 
 		<!-- the "Examples" portfolio section -->
 
-		<section id="examples" class="cw01 cf" >
+		<section id="examples" class="cw00 cf" >
 		<div class="fadein" style="visibility:hidden;" >
 
 			<header>
@@ -98,19 +104,19 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;&nbsp;Design</h4>
+					<h4 class="reversal cw00" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
-						<img id="link-2-00" src="./images/link-pp.gif" /><img id="link-2-01" src="./images/link-mf.gif" style="display:none;" />
+						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" />
 						<p>Custom Dynamic eLearning Course, published as Flash</p>
 					</button>
 				</div>
 			</article>
 
-			<article id="development" class="wrapper cw01" >
+			<article id="development" class="wrapper cw00" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;&nbsp;Development</h4>
+					<h4 class="reversal cw00" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
-						<img id="link-1-00" src="./images/link-p1.gif" /><img id="link-1-01" src="./images/link-m1.gif" style="display:none;" />
+						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" />
 						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
 					</button>
 					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
@@ -126,7 +132,7 @@
 
 		<!-- the "Expertise" About Me section -->
 
-		<section id="expertise" class="cw01 cf" >
+		<section id="expertise" class="cw00 cf" >
 		<div class="fadein" style="visibility:hidden;" >
 
 			<header>
@@ -140,8 +146,8 @@
 
 			<article class="wrapper dimmed" >
 				<div class="box" >
-					<h4 class="cw01" >&nbsp;&nbsp;Ascendant</h4>
-					<ul class="cw01" >
+					<h4 class="cw00" >&nbsp;&nbsp;Ascendant</h4>
+					<ul class="cw00" >
 						<li>Backbone</li>
 						<li>Ember</li>
 						<li>Couchbase&nbsp;&nbsp;</li>
@@ -157,7 +163,7 @@
 
 			<article class="wrapper active" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;&nbsp;Current</h4>
+					<h4 class="reversal cw00" >&nbsp;&nbsp;Current</h4>
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Mobile First Responsive Design</li>
@@ -171,7 +177,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;</h4>
+					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
 						<li>Node</li>
 						<li>Sass</li>
@@ -185,7 +191,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;</h4>
+					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
 						<li>Photoshop, Bootstrap</li>
 						<li>Visual Studio, Sublime</li>
@@ -200,7 +206,7 @@
 
 			<article class="wrapper" >
 				<div class="box" >
-					<h4 class="reversal cw01" >&nbsp;</h4>
+					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
 						<li>Graphic Design, Print Design, Layout</li>
 						<li>Writing, Copyediting, Proofreading</li>
@@ -225,7 +231,7 @@
 
 <!-- Footer, bottom -->
 
-<div id="container-footer" class="cw01" >
+<div id="container-footer" class="cw00" >
 	<footer id="footer" class="fadein" style="visibility:hidden;" >
 		<p>&copy; 2014 Mike Zimmerman. All rights reserved.</p>
 		<h5>&nbsp; version: 1.0.3</h5>
