--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<div id="theme-selector" title='Click here to rotate through themes. Next up is: "Deep Midnight Flamingo"' >
 			<div id="ts-01" ></div>
 			<div id="ts-02" ></div>
+			<div id="ts-03" ></div>
 			<div id="ts-00" ></div>
 			<div id="ts-01-2" ></div>
 			<div id="ts-02-2" ></div>
@@ -72,7 +73,7 @@
 <div id="container-header" class="cw00" >
 	<header id="header" class="wrapper fadein" style="visibility:hidden;" >
 
-		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" style="display:none;" /></div>
+		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" /><img id="hs-3" src="./images/photo-3.gif" /></div>
 
 		<h1>Mike Zimmerman*</h1>
 		<h2>JavaScript Developer</h2>
@@ -106,7 +107,7 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
-						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" />
+						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" /><img id="link-s-3" src="./images/link-s-3.gif" style="display:none;" />
 						<p>Custom Dynamic eLearning Course, published as Flash</p>
 					</button>
 				</div>
@@ -116,7 +117,7 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
-						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" />
+						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" /><img id="link-v-3" src="./images/link-v-3.gif" style="display:none;" />
 						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
 					</button>
 					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
