--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -15,6 +15,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta http-equiv="imagetoolbar" content="no" />
 
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://mikezimmerman.github.io/icons/ico144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://mikezimmerman.github.io/icons/ico114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://mikezimmerman.github.io/icons/ico72.png" />
+	<link rel="apple-touch-icon-precomposed" href="http://mikezimmerman.github.io/icons/ico64.png" />
+	<link rel="shortcut icon" sizes="196x196" href="http://mikezimmerman.github.io/icons/ico196.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
+	<link rel="icon" type="image/png" href="http://mikezimmerman.github.io/icons/favicon.png" />
+	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/ico32.png" />
+	<link rel="canonical" href="http://mikezimmerman.github.io/" />
+
 	<link rel="stylesheet" type="text/css" href="styles/ibox-systemsims.css" media="all" />
 
 	<title>Maintenance</title>
