--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -205,7 +205,9 @@ The free clipart used to illustrate many of the pages? Alas, a necessary evil im
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-54891141-1', 'auto');ga('send', 'pageview');
+  ga('require', 'displayfeatures');
+ga('require', 'displayfeatures');
+ga('create', 'UA-54891141-1', 'auto');ga('require', 'displayfeatures');ga('send', 'pageview');
 </script>
 </body>
 </html>
