--- a/projects/js-el-instructbox/instructbox.htm
+++ b/projects/js-el-instructbox/instructbox.htm
@@ -414,7 +414,9 @@ $( document ).ready(
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-54891141-1', 'auto');ga('send', 'pageview');
+  ga('require', 'displayfeatures');
+ga('require', 'displayfeatures');
+ga('create', 'UA-54891141-1', 'auto');ga('require', 'displayfeatures');ga('send', 'pageview');
 </script>
 </body>
 </html>
